--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/ritudubey/liri-node-app#readme",
   "dependencies": {
     "request": "^2.79.0",
+    "spotify": "^0.3.0",
     "twitter": "^1.4.0"
   }
 }
